Fixing navigation button spacing

--- a/src/static/less/buttons.less
+++ b/src/static/less/buttons.less
@@ -55,6 +55,7 @@
             text-decoration:none;
 	        text-shadow:0 1px 0 rgba(0,0,0,1);
             color:@white;
+			outline: 0;
         }
         &:active {
 	        .vertical-gradient(@orangeDark,0%,@orange,100%);
@@ -90,11 +91,11 @@
 	        .vertical-gradient(@blueLight,0%,@blue,100%);
 	        &:hover,
 	        &:focus {
-		        .vertical-gradient(@blue,0%,@blue,100%);
+		        .vertical-gradient(lighten(@blue,10%),0%,@blue,100%);
 				box-shadow:0 0.1em 0 @blueDark;
 			}
 	        &:active {
-		        .vertical-gradient(@blueDark,0%,@blue,100%);
+		        .vertical-gradient(@blueDark,0%,lighten(@blue,10%),100%);
 				box-shadow:0 0 0 @blueDark;
 			}
         }
