--- a/src/static/less/page.less
+++ b/src/static/less/page.less
@@ -249,6 +249,7 @@
 		text-align:center;
 		.btn {
 			min-width:160px;
+			margin: 0 0.2em;
 		}
 	}
 	
